# simple_server

./: .README.md.swp  .clang  AHTTPServer.vcxproj.filters  AKeyed.h  CMakeLists.txt  DAOBase.h  Dockerfile  HTTPPath.h  HttpRequest.cpp  HttpResponse.cpp  HttpResponse.h  JSON.cpp  JSON.h  Models.h  README.md  Server.cpp  Server.h  Sqlite3ConnectionHandler.cpp  SqliteConnectionHandler.h  UserModel.h  Utils.cpp  Utils.h  ahttpserver  cert.pem  help_usage.md  main.cpp  mydb.db  premake5.lua  readme.md  run-coverage.sh  run-tidy.sh  runformat.sh  runtest.sh  user_model.cpp  user_model.h
.github/workflows/: code-coverage.yml  linter.yml
DATABASE_TEST/: AKeyed.h  DAOBase.h  Models.h  Sqlite3ConnectionHandler.cpp  SqliteConnectionHandler.h  UserModel.h  user_model.cpp  user_model.h
cmake-module/: fetchSDLProjectFromSource.cmake
config/: server
experiments/: epoll_select.cpp  pass_client.cpp  pass_master_server.cpp
experiments/cppws/: base64.cpp  clientws.html
experiments/cppws/test/: base64test.cpp
experiments/exwebsocket/: simple_server_websocket_connection.cpp  simple_server_websocket_connection.h  simple_server_websocket_definitions.h  simple_server_websocket_utils.cpp  simple_server_websocket_utils.h
external_projects/cppws/: CMakeLists.txt  b64encode.cpp  base64.cpp  cppws.cpp  sha1.cpp  sha1.h
external_projects/cppws/test/: CMakeLists.txt  base64test.cpp
external_projects/pyws/: pyws.py
external_projects/simple_email_server/: CMakeLists.txt  smtp_server.cpp  test_simple_server.py
external_projects/simple_email_server/documentation/: imap_server_iteration.txt  smtp_workflow_sample.txt
google_test/: CMakeLists.txt
includes/: HttpPrimitiveUtils.h  HttpServer.h  HttpServerMetada.h  IOUtils.h  SHA1.h  defines.h  htmlbuilder.h  http_handler.h  io_utils.h  json.h  logger.h  simple_server.h  simple_server_definitions.h  simple_server_http_connection.h  simple_server_http_constant.h  simple_server_http_server.h  simple_server_interface.h  simple_server_logger.h  simple_server_utils.h  string_utils.h  tcp_default_handler.h  tcp_epoll_handler.h  tcp_handler.h  tcp_poll_handler.h  variant.h  websocket_handler.h
includes/simple_server/: simple_server.h
includes/simple_server/base/: simple_server_definitions.h  simple_server_interface.h  simple_server_sha1.h  simple_server_thread_container.h  simple_server_utils.h
includes/simple_server/http/: simple_server_http_connection.h  simple_server_http_constant.h  simple_server_http_server.h
includes/simple_server/tcp_handler/: simple_server_default_tcp_handler.h  simple_server_tcp_handlers.h
includes/simple_server/websocket/: simple_server_websocket_connection.h
page/: test.html
sample/: .gitignore  CMakeLists.txt  main.cpp
sample/assets/: index.html
src/: AHTMLBuilder.cpp  AHTMLBuilder.h  AHTTPConsoleLogger.cpp  AHTTPConsoleLogger.h  AHTTPServer  AHttpServer3.cpp  ASqlWrapper.cpp  ASqlWrapper.h  Configuration.h  Constant.h  DataBaseHandler.h  DocumentBuilder.cpp  DocumentBuilder.h  HOF.h  HTMLBuilder.h  HTTPPath.cpp  HTTPPath.h  HttpConnection.h  HttpDefaults.cpp  HttpDefaults.h  HttpHeader.cpp  HttpHeader.h  HttpIdentifier.cpp  HttpIdentifier.h  HttpPrimitiveUtils.cpp  HttpPrimitiveUtils.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpServerMetada.cpp  HttpServerMetada.h  IOUtils.cpp  IOUtils.h  JSON.cpp  JSON.h  Router.h  SHA1.cpp  (+30 more)
src/base/: simple_server_sha1.cpp  simple_server_tcp_handlers.cpp  simple_server_utils.cpp
src/http/: simple_server_http.cpp  simple_server_http_connection.cpp
src/websocket/: simple_server_websocket_connection.cpp
test/: CMakeLists.txt  io_utils_test.cpp  readme.md  string_utils_test.cpp  variant_test.cpp
test/code-coverage/coverage_report/: cmd_line
tests/: CMakeLists.txt  README.MD  main_test.cpp  my_test.cpp  sha1_test.cpp  testHttpServer.cpp  testmain.cc
wsclient/: HttpData.h  TCPClient.h  wclient  wsclient.cpp
